"編集テーブル"

--- a/phrase_detail/DetailViewCell.xib
+++ b/phrase_detail/DetailViewCell.xib
@@ -51,6 +51,10 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="phraseLabel" destination="Cph-KJ-WXW" id="16N-YK-f4O"/>
+                <outlet property="themeLabel" destination="DfP-H6-IUM" id="iBL-8n-fFq"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
