--- a/global_menu/MainTabBar.storyboard
+++ b/global_menu/MainTabBar.storyboard
@@ -9,6 +9,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--PhraseTable-->
+        <scene sceneID="O1Z-KW-2qx">
+            <objects>
+                <viewControllerPlaceholder storyboardName="PhraseTable" id="ApE-Ta-FIg" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="2o9-iJ-8C4"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tws-1T-DsD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1418" y="357"/>
+        </scene>
         <!--Main Tab Bar Controller-->
         <scene sceneID="yaL-sy-p98">
             <objects>
@@ -18,10 +28,24 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
+                    <connections>
+                        <segue destination="ApE-Ta-FIg" kind="relationship" relationship="viewControllers" id="ykw-kd-hPT"/>
+                        <segue destination="dB1-zT-NsC" kind="relationship" relationship="viewControllers" id="UDg-rF-VxF"/>
+                    </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G6H-ne-blG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-670" y="-102"/>
+        </scene>
+        <!--ChatPage-->
+        <scene sceneID="5T5-ef-I33">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ChatPage" id="dB1-zT-NsC" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="uQQ-od-uG5"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gcl-Xz-op6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-308" y="355"/>
         </scene>
     </scenes>
 </document>
